<resources>
    <string name="app_name">CST Voting System</string>
    <string name="user_email">User Email</string>
    <string name="user_name">User Name</string>
    <string name="username">AdminID</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name: </string>
    <string name="email">Email:</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_user_email">Enter User Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="update_candidates">Update Candidates</string>
    <string name="register_candidates">Register Candidates</string>
    <string name="logout">Logout</string>
    <string name="please_click_here_to_verify_email">Please Click Here To Verify Email</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="user_profile">User Profile</string>
    <string name="about">About</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <string name="profilepic">profilePic</string>
    <string name="your_profile">Your Profile</string>
    <string name="user_id">User ID:</string>
    <string name="candidates">Candidates</string>
    <string name="manifesto">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  "</string>
    <string name="chief_councillor">Chief Councillor</string>
    <string name="dupety_chief_councillor">Dupety Chief Councillor</string>
    <string name="hostel_councillor">Hostel Councillor</string>
    <string name="title">CST Voting System</string>
    <string name="about_app">CST Voting System is a mobile voting \napplication for the CST councillors voting.
    With the help of this app, the students and the staffs can vote for their respective candidate.
    Only the staffs and students of CST can register and use this app . After logging into this application,
    the voter can view candidates, view their manifesto and view the result and also log out of the application.
        Every vote counts.

    </string>
    <string name="vote">Vote</string>
    <string name="result">Result</string>
    <string name="title_activity_ccvote">CCVote</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save">Save</string>
    <string name="add_profile">Add Profile</string>
    <string name="candidate">Candidates</string>
    <string name="cheif_councillor">Cheif Councillor</string>

    <string-array name="dropdown">
        <item>Select Candidates role</item>
        <item>Chief Councillor</item>
        <item>Girl Deputy Chief Councillor</item>
        <item>Girls Block Councillor</item>
        <item>Girls Game Councillor</item>
        <item>Girls Cultural Councillor</item>
        <item>Girls College Academy Committee</item>
        <item>Boys Deputy Chief Councillor</item>
        <item>Boys Block Councillor</item>
        <item>Boys Game Councillor</item>
        <item>Boys Cultural Councillor</item>
        <item>Boys College Academy Committee</item>
    </string-array>


</resources>