<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        app:showAsAction="always"
        android:title=""
        android:icon="@drawable/ic_vert">


        <menu>

            <item android:title="Home"
                android:id="@+id/home"
                app:showAsAction="never"
                android:icon="@drawable/ic_home"/>

            <item android:title="@string/user_profile"
                android:id="@+id/user_profile"
                app:showAsAction="never"
                android:icon="@drawable/ic_person"/>

            <item android:title="@string/about"
                android:id="@+id/about"
                app:showAsAction="never"
                android:icon="@drawable/ic_group"/>

            <item android:title="@string/logout"
                android:id="@+id/logout"
                app:showAsAction="never"
                android:icon="@drawable/ic_login"/>


        </menu>

    </item>







</menu>